2001-03-20  Alexandre Oliva  <aoliva@redhat.com>

	* config/sh/sh.md (movsf_ie): Fix output patterns for fpul load
	and store.
	(movsi_ie): Introduce fpul store.

2001-03-20  Alan Modra  <alan@linuxcare.com.au>

	* Makefile.in (OBJS): Remove hashtab.o.

2001-03-19  Tom Tromey  <tromey@redhat.com>

	* gcc.c (init_gcc_specs): Fix comment.

2001-03-19  Mark Mitchell  <mark@codesourcery.com>

	* cse.c (find_comparison_args): Update documentation.  Fix
	mishandling of COMPARE operations.

	* tree.def (ABS_EXPR): Add documentation.
	* fold-const.c (fold): Improve folding of ABS_EXPRs.

2001-03-16  Andrew Haley  <aph@cambridge.redhat.com>

	* config/ia64/libgcc-ia64.ver: Add __ia64_backtrace.

2001-03-19  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* README.X11: Remove obsolete file.

2001-03-18  Anthony Green  <green@redhat.com>

	* config/pj/pj.h: Remove some trailing commas.
	(ASM_SPEC): Use -EB and -EL, not -mb and -ml.

2001-03-17  Anthony Green  <green@redhat.com>

	* config/pj/lib1funcs.S: Fix broken comment.
	* config/pj/pj.h (LOCAL_LABEL_PREFIX): Prefix internal
	labels with '.'.

2001-03-18  Joseph S. Myers  <jsm28@cam.ac.uk>

	* gcc.texi: Remove obsolete information relating to build and
	installation problems with enquire or the Pyramid C compiler.

2001-03-16  Philip Blundell  <philb@gnu.org>

	* config.gcc: Remove obsolete targets "arm*-*-linuxoldld" and
	"armv2-*-linux".
	* config/arm/linux-elf.h: Remove historical relics related to
	above configurations.
	* config/arm/linux-oldld.h: Delete.
	* config/arm/linux-elf26.h: Delete.

2001-03-17  Richard Henderson  <rth@redhat.com>

	* dwarf2out.c (lookup_filename): Emit .file if the assembler
	is generating .debug_line.
	(dwarf2out_init): Add main_input_filename to the file table first.
	* configure.in (as_dwarf2_debug_line): Test with file number 1
	instead of file number 0.

	* dwarf2out.c: Revert most of 2000-11-25 and 2001-01-24 changes.
	(LN_PROLOG_AS_LABEL, LN_PROLOG_END_LABEL): New.